@@ -1,3 +1,14 @@
+2000-07-31  Christian Krone  <krischan@sql.de>
+
+	* src/jacl/tcl/lang/Channel.java: Add refCount.
+	* src/jacl/tcl/lang/CloseCmd.java (cmdProc):
+	Use TclIO.unregisterChannel.
+	* src/jacl/tcl/lang/FileChannel.java: Fix typos.
+	* src/jacl/tcl/lang/OpenCmd.java: Fix typos.
+	* src/jacl/tcl/lang/StdChannel.java (getChanName):
+	Add getChanName method to StdChannel class.
+	* src/jacl/tcl/lang/TclIO.java: Use refCount.
+
 2000-07-29  Mo DeJong  <mdejong@redhat.com>
 
 	* tests/tcljava/JavaLock.test: Use
